--- a/B&B_App/_Imports.razor
+++ b/B&B_App/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using B_B_App
 @using B_B_App.Shared
+@using MudBlazor
+@using B_B_App.Core.Managers
+@using B_B_App.Components.Dialogs
