--- a/B&B_App/Pages/Index.razor
+++ b/B&B_App/Pages/Index.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @inject NavigationManager navi
+@inject IRoomService<Room> roomService
 @using B_B_ClassLibrary.BusinessModels;
 
 <PageTitle>Home Page</PageTitle>
@@ -7,6 +8,7 @@
     <div>
 
         <ul>
+            @if(_rooms != null)
             @foreach (var room in _rooms)
             {
                 <li class="indigo darken">
@@ -67,29 +69,11 @@
     private bool autocycle = true;
     private Transition transition = Transition.Fade;
     private List<string> pictures = new List<string>() { "images/vær1.jpg", "images/vær2.jpg", "images/vær3.jpg" };
-
-    protected override void OnInitialized()
+    
+    protected override async Task OnInitializedAsync()
     {
         // Load data here
-        _rooms = new List<Room>()
-        {
-            new Room()
-            {
-                Id = 0,
-                Number = 1,
-                NumberOfBeds = 2,
-                PricePerNight = 730,
-                Rating = 2.4,
-            },
-            new Room()
-            {
-                Id = 1,
-                Number = 2,
-                NumberOfBeds = 3,
-                PricePerNight = 310,
-                Rating = 1.4,
-            }
-        };
+        _rooms = await roomService.GetAllRooms();
 
         base.OnInitialized();
     }
