--- a/B&B_App/_Imports.razor
+++ b/B&B_App/_Imports.razor
@@ -13,3 +13,4 @@
 @using B_B_App.Components.Dialogs
 @using B_B_ClassLibrary.BusinessModels
 @using B_B_App.Services
+@using B_B_App.Components.FormEditing
