--- a/B&B_App/_Imports.razor
+++ b/B&B_App/_Imports.razor
@@ -10,6 +10,8 @@
 @using B_B_App.Shared
 @using MudBlazor
 @using B_B_App.Core.Managers
+@using B_B_App.Core.Helpers
+@using B_B_App.Core.Utilities
 @using B_B_App.Components.Dialogs
 @using B_B_ClassLibrary.BusinessModels
 @using B_B_App.Services
