--- a/B&B_App/Pages/RoomEditor.razor
+++ b/B&B_App/Pages/RoomEditor.razor
@@ -6,7 +6,7 @@
 
 <FormEditor TModel="Room" Model="@_room" Pictures="_pictures"></FormEditor>
 
-<MudButton ButtonType="ButtonType.Button" , Color="Color.Info"></MudButton>
+<MudButton ButtonType="ButtonType.Button" Color="Color.Info"></MudButton>
 <InputFile OnChange="@AddPicture" single accept=".jpg,.jpeg,.png,.PNG" class="btn btn-primary" />
 @code {
     [Parameter]
