--- a/B&B_App/_Imports.razor
+++ b/B&B_App/_Imports.razor
@@ -16,3 +16,4 @@
 @using B_B_ClassLibrary.BusinessModels
 @using B_B_App.Services
 @using B_B_App.Components.FormEditing
+@using Blazored.FluentValidation
